<resources>
    <string name="app_name">Crowd1</string>
    <string name="menuButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="previousText">Do you want to continue previous game?</string>
    <string name="title_activity_tab_menu">TabMenuActivity</string>
    <string name="tab_text_1">Profil</string>
    <string name="tab_text_2">Games</string>
    <string name="tab_text_3">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="changePasswordBttn">CHANGE PASSWORD</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="setting1">Button</string>
    <string name="setting2">Button</string>
    <string name="back">Back</string>
    <string name="repeatGame">Repeat Game</string>
    <string name="backMenu">Back To Menu</string>
    <string name="changeTheme">Change Theme</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="emptyGame">Game Empty. Go Back To Menu</string>
    <string name="newGame">NEW GAME</string>
    <string name="start">START</string>
    <string name="previousGame">Do you want to continue previous game?</string>
    <string name="resume">RESUME</string>
    <string name="sort">SORT</string>
    <string name="highscore">Highscore</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="highscoreTitle">HIGHSCORE</string>
    <string name="logo">Logo</string>
    <string name="button">Button</string>
    <string name="points">Points:   </string>
    <string name="username">Username:   </string>
    <string name="avatar">avatar</string>
    <string name="change_avatar">CHANGE AVATAR</string>
    <string name="stats">STATS</string>
    <string name="your_items">YOUR ITEMS</string>
    <string name="level">LEVEL</string>
    <string name="cancel">CANCEL</string>
    <string name="change">CHANGE</string>
    <string name="choose_avatar">CHOOSE AVATAR</string>
    <string name="buy">BUY</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="shop">SHOP</string>
    <string name="generate_new_game_key">GENERATE NEW GAME KEY</string>
</resources>
